# reservation

./: README.md  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs
abi/src/pb/: mod.rs  reservation.rs
migrations/: 20221222105543_reservation.up.sql  20221222110124_reservation_trigger.down.sql  20221222110124_reservation_trigger.up.sql  20221222110631_reservation_func.up.sql
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
